# FFAC

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  draw.h  gendataset.h  model.h  traj.h
Demo/: ImGui.lib  Runtime_demo_by_YIFEI_CHEN.exp  Runtime_demo_by_YIFEI_CHEN.lib
Source/: CMakeLists.txt  main.cpp
data/: LocomotionFlat04_000.bvh  LocomotionFlat04_000_mirror.bvh  LocomotionFlat09_000.bvh  LocomotionFlat09_000_mirror.bvh  README.md  phase_rnn_1_128.pt  phase_rnn_1_128.pth  phase_rnn_2_128.pt  phase_rnn_2_128.pth  pose_ff_no0_nh512.pt  pose_ff_no0_nh512.pth  pose_ff_no1_nh512.pt  pose_ff_no1_nh512.pth  pose_ff_no2_nh512.pt  pose_ff_no2_nh512.pth  pose_ff_no32_nh512.pt  pose_ff_no32_nh512.pth  pose_ff_no8_nh512.pt  pose_ff_no8_nh512.pth
